--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="row " style="height: 92%;"> 
             <div class="flex-column d-flex bg-dark p-2">
                 <p class="border-bottom text-white text-center f-small" >Opciones</p>               
-                    <button type="button" id="button_add" class="btn btn-primary btn-lg">Añadir un nodo &nbsp
-                        <svg  width="40" height="30" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                    <button type="button" id="btnAdd" class="btn btn-primary btn-lg">Añadir un nodo &nbsp
+                         <svg  width="40" height="30" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
-                          </svg>
+                         </svg> 
                     </button>
 
                     <button type="button" class="btn btn-primary btn-lg mt-2">Resetear &nbsp
@@ -64,16 +64,13 @@
             </div>
 
             <div class="col p-2 bg-secondary  h-100 w-100">
-                <div id="nodo1" class="btn nodo1 font-weight-bolder">NODO 1</div>
-                <div id="nodo2" class="btn nodo2 font-weight-bolder">NODO 2</div>
-                <div id="nodo3" class="btn nodo3 font-weight-bolder">NODO 3</div>
+                <!--<svg id="svgFrame" width="100%" viewBox="0 0 20 10" xmlns="http://www.w3.org/2000/svg"> 
+                   
+                </svg> -->
 
-                <div id="modalInfo" class="modal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <p>Aquí va la información del nodo</p>
-                    <div id="btnBorrar" class="btn btn-danger  font-weight-bolder">Borrar nodo</div>
-                </div>
+                <svg id="svgFrame" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="-10 -5 20 10" style=" background-color: rgb(161, 161, 178);"></svg>
+
+                
             </div>
         </div>      
     </div>     
