--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         </div>
 
         <div class="row " style="height: 92%;">
-            <div class="flex-column d-flex bg-dark p-2">
+            <div class="flex-column d-flex bg-dark p-2 w-25">
                 <p class="border-bottom text-white text-center f-small">Opciones</p>
-                <button type="button" id="btnAdd" class="btn btn-primary btn-lg">Añadir un nodo &nbsp
-                    <svg width="40" height="30" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                <button type="button" id="btnAdd" class="btn btn-primary btn-lg mx-lg-5 disabled">Añadir un nodo
+                    <svg width="60" height="30" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                         <path
                             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
                     </svg>
                 </button>
 
-                <button type="button" class="btn btn-primary btn-lg mt-2">Resetear &nbsp
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                <button type="button" class="btn btn-primary btn-lg mt-2 mx-lg-5">Resetear
+                    <svg xmlns="http://www.w3.org/2000/svg" width="60" height="30" fill="currentColor"
                         class="bi bi-trash-fill" viewBox="0 0 16 16">
                         <path
                             d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z" />
@@ -42,13 +42,13 @@
 
                 <div class="text-center">
                     <button type="button" id="btnPlay" class="btn btn-danger btn-lg ">
-                        <svg width="30" height="30" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                        <svg width="35" height="30" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
                             <path
                                 d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
                         </svg>
                     </button>
                     <button type="button" class="btn btn-primary btn-lg ">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="30" fill="currentColor"
                             class="bi bi-skip-forward-fill" viewBox="0 0 16 16">
                             <path
                                 d="M15.5 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V8.753l-6.267 3.636c-.54.313-1.233-.066-1.233-.697v-2.94l-6.267 3.636C.693 12.703 0 12.324 0 11.693V4.308c0-.63.693-1.01 1.233-.696L7.5 7.248v-2.94c0-.63.693-1.01 1.233-.696L15 7.248V4a.5.5 0 0 1 .5-.5z" />
@@ -65,9 +65,13 @@
                 <p class="border-bottom text-white text-center f-small mt-3 mb-0">Ronda Actual</p>
                 <p class="text-white text-center f-big mt-0">0</p>
 
+                <div class="text-white">Log:</div>
                 <div class="box">
-                    <div class="text-white">Log:</div>
-                    <div class="log"></div>
+                    <div id="logBox" class="log" style="width: 0; height: 0 ; color: white">
+                        <p id="logText" style="white-space: nowrap; font-size: small;">
+                        </p>
+
+                    </div>
                 </div>
             </div>
 
@@ -79,9 +83,10 @@
         </div>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="modalInfo" tabindex="-1" role="dialog" data-backdrop="false" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+    <!-- Modal 1 -->
+    <div class="modal fade p-2" id="modalInfo" tabindex="-1" role="dialog" data-keyboard="false" data-backdrop="static" aria-hidden="true"
+        style="margin-left: 12.5%;">
+        <div class="modal-dialog modal-dialog-centered "  role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modalTitle">Información del nodo x</h5>
@@ -90,24 +95,62 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p class="font-weight-normal">ESTADO: ---</p>
-                    <p class="font-weight-normal">ESTADO: ---</p>
-                    <p class="font-weight-normal">ESTADO: ---</p>
-                    <p class="font-weight-normal">ESTADO: ---</p>
-                </div>
+                    <p id="modalEstado" class="font-weight-normal " style="white-space: pre-wrap"></p>
 
+                </div>
 
                 <div class="modal-footer">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Propon un valor"
+                        <input id="textPropuesta" type="text" class="form-control" placeholder="Propon un valor"
                             aria-describedby="basic-addon2">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">Proponer</button>
+                            <button id="btnProponer" class="btn btn-outline-secondary" type="button">Proponer</button>
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer">
+                    <button id="btnSuspender" class="btn btn-outline-dark btn-danger col" type="button">Suspender nodo</button>
+                </div>
             </div>
         </div>
+    </div>
+
+
+    <!-- Modal 2-->
+    <div class="modal fade p-2" id="modalInicio" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false"  aria-hidden="true"
+        style="margin-left: 12.5%;">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">Datos iniciales de la simulación</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="btn-group"> 
+                        <p class="dropdown-arrow dropdown-arrow-inverse">Elige el número de nodos para la simulación</p>
+                        <button class="btn btn-primary status ml-5">3</button>
+                        <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> 
+                        </button>
+                        <ul class="dropdown-menu dropdown-inverse text-center">
+                            <li><a href="#">3</a>
+                            </li>
+                            <li><a href="#">5</a>
+                            </li>
+                            <li><a href="#">7</a>
+                            </li>
+                            <li><a href="#">9</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button id="btnAcepta" class="btn  btn-primary col" type="button">
+                        Aceptar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
@@ -116,8 +159,14 @@
 <script src="/popper/popper.min.js"></script>
 <script src="/bootstrap/bootstrap.js"></script>
 <script src="/anime/anime.min.js"></script>
-<script src="/js/animations.js"></script>
+<script type="module" src="/js/nodos.js"></script>
+<script type="module" src="/js/animations.js"></script>
+<script type="module" src="/js/canalMensajes.js"></script>
+<script type="module" src="/js/mensaje.js"></script>
+<script type="module" src="/js/gestionaEventos.js"></script>
 <script type="module" src="/js/paxos.js"></script>
 <script type="module" src="/js/timer.js"></script>
+
+
 
 </html>
