Correciones varias - fixes #1 - fixes #3 - fixes #6 - fixes #8

--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@
                 <div class="modal-body">
                     <div class="btn-group"> 
                         <p class="dropdown-arrow dropdown-arrow-inverse">Elige el número de nodos para la simulación</p>
-                        <button class="btn btn-primary status ml-5">3</button>
-                        <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> 
+                        <button id="dropDownValue" class="btn btn-primary status ml-5">3</button>
+                        <button id="dropdownButton"class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> <span class="caret"></span> 
 
                         </button>
-                        
-                        <ul class="dropdown-menu dropdown-inverse text-center">
+                        <ul  class="dropdown-menu dropdown-inverse text-center">
                             <li><a href="#">3</a>
                             </li>
                             <li><a href="#">5</a>
@@ -173,7 +172,7 @@
                       </div>
                       
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
                         <label class="form-check-label" for="flexRadioDefault2">
                           Modo automático
                         </label>
