#9 fixed #5 y #2 arreglados parcialmente

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <div class="row" style="height: 8%;">
             <nav class="navbar navbar-collapse bg-primary border border-dark border">
                 <span class="navbar-brand mb-0 h1 text-white ml-4">Simulador Protocolo Paxos</span>
+                <button type="button" class="btn btn-primary btn-primary " id="btnInfo">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-info-square-fill" viewBox="0 0 16 16">
+                        <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.93 4.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                      </svg>
+                </button>
             </nav>
         </div>
 
@@ -44,7 +49,7 @@
                     </svg>
                 </button>
 
-                <button type="button" class="btn btn-primary btn-sm mt-3 mx-lg-5 f-smaller" id="btnPartir">Partición de red
+                <button type="button" class="btn btn-primary btn-sm mt-3 mx-lg-5 f-smaller" id="btnPartir"><span>Crear Partición</span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="60" height="30" fill="currentColor" class="bi bi-scissors" viewBox="0 0 16 16">
                         <path d="M3.5 3.5c-.614-.884-.074-1.962.858-2.5L8 7.226 11.642 1c.932.538 1.472 1.616.858 2.5L8.81 8.61l1.556 2.661a2.5 2.5 0 1 1-.794.637L8 9.73l-1.572 2.177a2.5 2.5 0 1 1-.794-.637L7.19 8.61 3.5 3.5zm2.5 10a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0zm7 0a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0z"/>
                       </svg>
