--- a/index.html
+++ b/index.html
@@ -94,23 +94,15 @@
         <div class="modal-dialog modal-dialog-centered "  role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Información del nodo x</h5>
+                    <h5 class="modal-title" id="modalTitle">Propón un valor</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <p id="modalEstado" class="font-weight-normal font-weight-bold" style="white-space: pre-wrap"></p>
-                    <p id="modalRonda" class="font-weight-normal font-weight-bold" style="white-space: pre-wrap"></p>
-                    <p id="modalPausado" class="font-weight-normal font-weight-bold" style="white-space: pre-wrap"></p>
-                    <p id="modalPrometido" class="font-weight-normal font-weight-bold" style="white-space: pre-wrap"></p>
-                    <p id="modalValor" class="font-weight-normal font-weight-bold" style="white-space: pre-wrap"></p>
-
-                </div>
 
                 <div class="modal-footer">
                     <div class="input-group mb-3">
-                        <input id="textPropuesta" type="text" class="form-control" placeholder="Propon un valor"
+                        <input id="textPropuesta" type="text" class="form-control" placeholder="Valor"
                             aria-describedby="basic-addon2">
                         <input id="textRonda" type="number" class="form-control" placeholder="Num Ronda"
                             aria-describedby="basic-addon2">
