--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
                 <p id="pDestino">Destino</p>
                 <p id="pMensaje">Mensaje</p>
                 <p id="pValor">Valor</p>
-                <button id="btnResetFin" class="btn  btn-info col" type="button">
-                    Perder
+                <button id="btnPerderMsg" class="btn  btn-dark col" type="button">
+                    Perder Mensaje
                 </button>
             </div>
         </div>
