--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Simulador Paxos</title>
 
@@ -402,14 +402,14 @@
 
 </body>
 
-<script src="/jquery/jquery-3.6.0.js"></script>
-<script src="/popper/popper.min.js"></script>
-<script src="/bootstrap/bootstrap.js"></script>
-<script src="/anime/anime.min.js"></script>
-<script type="module" src="/js/nodos.js"></script>
-<script type="module" src="/js/mensaje.js"></script>
-<script type="module" src="/js/paxos.js"></script>
-<script type="module" src="/js/timer.js"></script>
+<script src="./jquery/jquery-3.6.0.js"></script>
+<script src="./popper/popper.min.js"></script>
+<script src="./bootstrap/bootstrap.js"></script>
+<script src="./anime/anime.min.js"></script>
+<script type="module" src="./js/nodos.js"></script>
+<script type="module" src="./js/mensaje.js"></script>
+<script type="module" src="./js/paxos.js"></script>
+<script type="module" src="./js/timer.js"></script>
 
 
 </html>
