--- a/index.html
+++ b/index.html
@@ -407,6 +407,6 @@
 
 
 <script type="module" src="./js/paxos.js"></script>
-<script type="module" src="/js/handlers.js"></script>
+<script type="module" src="./js/handlers.js"></script>
 
 </html>
